update FetchType and mappedBy settings